Actions
Bug #9831
closedC99-like atan2 check test failure under MinGW-w64
Bug #9831:
C99-like atan2 check test failure under MinGW-w64
Description
After introduction of Feature #9799 (r45805) I started to see this failure when running tests under mingw-w64:
TestMath#test_atan2 [C:/Users/Luis/Code/ruby/ruby/test/ruby/test_math.rb:28]:
Exception raised:
<#<ArgumentError: comparison of Float with Float failed>>.
Here is a gist with all the other failures:
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
Applied in changeset r45930.
configure.in: check atan2
- configure.in (rb_cv_atan2_inf_c99): check whether runtime atan2
handles Inf as C99. ruby-core:62536] [Bug #9831]
Updated by usa (Usaku NAKAMURA) about 12 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN to 2.0.0: DONTNEED, 2.1: DONTNEED
Actions